Fix spacing constraints

--- a/yahtzee/src/App.css
+++ b/yahtzee/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .App-title {
