--- a/yahtzee/src/Game.css
+++ b/yahtzee/src/Game.css
@@ -1,5 +1,5 @@
 .Game {
-  width: 30%;
+  width: 50%;
   background: white;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
   margin: 0 30%;
